--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,40 @@
+APScheduler==3.9.1
+async-timeout==4.0.2
+blinker==1.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.4
+Deprecated==1.2.13
 Flask==2.0.3
+Flask-APScheduler==1.12.3
+Flask-Email==1.4.4
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
+gevent==21.12.0
 greenlet==1.1.2
+huey==2.4.3
+idna==3.3
 itsdangerous==2.1.1
 Jinja2==3.0.3
+lxml==4.8.0
 MarkupSafe==2.1.1
+packaging==21.3
+pycparser==2.21
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+redis==4.2.0
+requests==2.27.1
+six==1.16.0
 SQLAlchemy==1.4.32
+typing_extensions==4.1.1
+tzdata==2022.1
+tzlocal==4.1
+urllib3==1.26.9
 Werkzeug==2.0.3
+wrapt==1.14.0
+zope.event==4.5.0
+zope.interface==5.4.0
